[gd_scene load_steps=21 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://script/states/AirState.gd" type="Script" id=3]
[ext_resource path="res://script/states/RootState.gd" type="Script" id=4]
[ext_resource path="res://script/PlayerTransitConditions.gd" type="Script" id=5]
[ext_resource path="res://script/Player.gd" type="Script" id=6]
[ext_resource path="res://script/states/Jump.gd" type="Script" id=7]
[ext_resource path="res://script/StateMachine.gd" type="Script" id=8]
[ext_resource path="res://script/states/Fall.gd" type="Script" id=9]
[ext_resource path="res://script/states/GroundState.gd" type="Script" id=10]
[ext_resource path="res://script/states/Walk.gd" type="Script" id=11]
[ext_resource path="res://script/states/Idle.gd" type="Script" id=12]
[ext_resource path="res://script/states/JumpState.gd" type="Script" id=13]
[ext_resource path="res://script/states/FallState.gd" type="Script" id=14]
[ext_resource path="res://script/states/CrouchJump.gd" type="Script" id=15]
[ext_resource path="res://script/states/CrouchFall.gd" type="Script" id=16]
[ext_resource path="res://script/states/Crouch.gd" type="Script" id=17]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 29, 29 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 431, 30 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

void fragment(){
	COLOR = vec4(0.5,0.5,0.8,1.0);
}
"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )

[node name="world" type="Node2D"]

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 424, 462 )
script = ExtResource( 6 )

[node name="SM" type="Node" parent="Player"]
script = ExtResource( 8 )

[node name="TransitConditions" type="Node" parent="Player/SM"]
script = ExtResource( 5 )

[node name="RootState" type="Node" parent="Player/SM"]
script = ExtResource( 4 )

[node name="AirState" type="Node" parent="Player/SM/RootState"]
script = ExtResource( 3 )

[node name="JumpState" type="Node" parent="Player/SM/RootState/AirState"]
script = ExtResource( 13 )

[node name="Jump" type="Node" parent="Player/SM/RootState/AirState/JumpState"]
script = ExtResource( 7 )

[node name="CrouchJump" type="Node" parent="Player/SM/RootState/AirState/JumpState"]
script = ExtResource( 15 )

[node name="FallState" type="Node" parent="Player/SM/RootState/AirState"]
script = ExtResource( 14 )

[node name="Fall" type="Node" parent="Player/SM/RootState/AirState/FallState"]
script = ExtResource( 9 )

[node name="CrouchFall" type="Node" parent="Player/SM/RootState/AirState/FallState"]
script = ExtResource( 16 )

[node name="GroundState" type="Node" parent="Player/SM/RootState"]
script = ExtResource( 10 )

[node name="Walk" type="Node" parent="Player/SM/RootState/GroundState"]
script = ExtResource( 11 )

[node name="Idle" type="Node" parent="Player/SM/RootState/GroundState"]
script = ExtResource( 12 )

[node name="Crouch" type="Node" parent="Player/SM/RootState/GroundState"]
script = ExtResource( 17 )

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 4 )

[node name="StateLabel" type="Label" parent="Player"]
margin_left = -25.0
margin_top = -56.0
margin_right = 15.0
margin_bottom = -42.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="."]
margin_left = 311.0
margin_top = 21.0
margin_right = 523.0
margin_bottom = 52.0
rect_scale = Vector2( 2, 2 )
text = "Press down to crouch
Press space to jump / doublejump"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 507, 569 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
material = SubResource( 3 )
scale = Vector2( 13.52, 1 )
texture = ExtResource( 1 )
